# VAME

./: .gitignore  Dockerfile  MANIFEST.in  README.md  VAME.yaml  pyproject.toml  reinstall.sh  requirements.txt  setup.py
.github/workflows/: release-vame-package.yaml  testing.yaml
examples/: README.md  align_demo.py  convert_maDLC_csv_individual_csv.py  demo.ipynb  demo.py  demo_csv_to_npy.py  demo_docker.py
src/vame/: __init__.py
src/vame/analysis/: __init__.py  community_analysis.py  generative_functions.py  gif_creator.py  pose_segmentation.py  segment_behavior.py  tree_hierarchy.py  umap.py  umap_visualization.py  videowriter.py
src/vame/initialize_project/: __init__.py  new.py
src/vame/legacy/: rnn_model.py
tests/: conftest.py  requirements-tests.txt  test_analysis.py  test_initialize_project.py  test_model.py  test_util.py
tests/initialize_project/: fixtures.py  test_initialize_project.py
tests/test_project_sample_nwb/: cropped_video.nwb
tests/tests_project_sample_data/: cropped_video.csv
vame/: __init__.py
vame/analysis/: __init__.py  behavior_structure.py  community_analysis.py  generative_functions.py  gif_creator.py  pose_segmentation.py  segment_behavior.py  tree_hierarchy.py  umap_visualization.py  videowriter.py  vis_network.py
vame/initalize_project/: __init__.py  new.py
vame/initialize_project/: __init__.py  new.py
vame/model/: __init__.py  create_training.py  dataloader.py  evaluate.py  rnn_model.py  rnn_vae.py
vame/util/: __init__.py  align_egocentrical.py  auxiliary.py  csv_to_npy.py  gif_pose_helper.py
(+16 files in other folders)
